--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <title>Document</title>
     <link href="/css/tailwind.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
-    <div class="px-8 py-12"><!--space-y-6 it`s making mt to all elements-->
+<body class="bg-gray-100 ">
+    <div class="grid lg:grid-cols-2 2xl:grid-cols-5">
+    <div class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:px-12 lg:py-24 lg:max-w-full xl:mr-0 2xl:col-span-2" ><!--space-y-6 it`s making mt to all elements; max-w-md it does not  give div to become bigger-->
+        <div class="xl:max-w-xl">
         <img class="h-10" src="/img/logo.svg" alt="Workcation" />
-        <img class="mt-6 rounded-lg shadow-xl" src="/img/beach-work.jpg" alt="Beach" >
-        <h1 class="mt-6 text-2xl font-bold text-gray-800">You can work from work. <span class="text-indigo-600">So work from work</span></h1>
-        <p class="mt-2 text-gray-600">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero a cum, libero id ratione doloremque tempore beatae quaerat nesciunt saepe quod eligendi iusto magni dolor delectus maxime est nulla quis.</p>
-        <div class="mt-4" >
-        <a href="#" class="bg-indigo-500 text-white px-5 py-3 inline-block rounded-lg shadow-lg uppercase tracking-wider font-semibold">Book your work</a>
+        <img class="mt-6 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover object-center lg:hidden" src="/img/beach-work.jpg" alt="Beach" >
+        <h1 class="mt-6 text-2xl font-bold text-gray-800 sm:mt-8 sm:text-4xl lg:text-3xl xl:text-4xl">You can work from work. <br class="hidden lg:inline"><span class="text-indigo-600">So work from work</span></h1>
+        <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero a cum, libero id ratione doloremque tempore beatae quaerat nesciunt saepe quod eligendi iusto magni dolor delectus maxime est nulla quis.</p>
+        <div class="mt-4 sm:mt-6" >
+        <a href="#" class="bg-indigo-500 text-white px-5 py-3 inline-block rounded-lg shadow-lg uppercase tracking-wider font-semibold sm:text-base">Book your work</a>
     </div>
+    </div>
+    </div>
+    <div class="hidden lg:block relative 2xl:col-span-3">
+    <img class="absolute inset-0 w-full h-full object-cover object-center" src="/img/beach-work.jpg" alt="Beach" >
     </div>
     
-
+</div>
 
 </body>
 </html>
