--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <img class="mt-6 rounded-lg shadow-xl sm:mt-8 sm:h-64 sm:w-full sm:object-cover object-center lg:hidden" src="/img/beach-work.jpg" alt="Beach" >
         <h1 class="mt-6 text-2xl font-bold text-gray-800 sm:mt-8 sm:text-4xl lg:text-3xl xl:text-4xl">You can work from work. <br class="hidden lg:inline"><span class="text-indigo-600">So work from work</span></h1>
         <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero a cum, libero id ratione doloremque tempore beatae quaerat nesciunt saepe quod eligendi iusto magni dolor delectus maxime est nulla quis.</p>
-        <div class="mt-4 sm:mt-6" >
-        <a href="#" class="bg-indigo-400 sm:hover:bg-green-700 text-white px-5 py-3 inline-block rounded-lg shadow-lg uppercase tracking-wider font-semibold sm:text-base hover:bg-indigo-400 hover:-translate-y-1 transform transition focus:outline-none focus:ring focus:ring-offset-2 focus:ring-offset-indigo-400 focus:ring-opacity-50 active:bg-indigo-600">Book your work</a>
+        <div class="mt-4 sm:mt-6 space-x-1" >
+        <a href="#" class="btn btn-primary shadow-lg transform transition hover:-translate-y-1 ">Book your work</a>
+        <a href="#" class="btn btn-secondary ">Learn more</a>
     </div>
     </div>
     </div>
